[project]
name = "fastapi-pydantic-test-project"
version = "0.1.0"
description = "Discover how FastAPI and Pydantic works"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "hdwallet>=3.4.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]

[tool.basedpyright]
reportMissingTypeStubs = false
